fix domain list select box alignment

--- a/client/stylus/app.environments.styl
+++ b/client/stylus/app.environments.styl
@@ -61,9 +61,9 @@ app.environments.styl
         margin-right    0
 
     .kdselectbox.domains
-      position absolute
-      top 5px
-      right 0
+      position          absolute
+      top               6px
+      right             -4px
 
     > .input-wrapper
       width             400px
